# C-_meta_programing_utils

./: .gitignore  CMakeLists.txt
include/: bulk_inc.hpp  library.hpp  pimpl_ptr.hpp
include/pimpl_dmm/: shared.hpp  unique.hpp
